# Contact-Management-Rust-API

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs  state.rs
src/app/dto/: email.rs  mobile.rs  person.rs
src/app/handler/: emails.rs  mobiles.rs  mod.rs  persons.rs
src/app/route/: mod.rs
src/app/service/: email_service.rs  mobile_service.rs  mod.rs  person_service.rs
src/entities/: emails.rs  mobiles.rs  mod.rs  persons.rs  prelude.rs
